--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,10 @@ theme: minima
 plugins:
   - jekyll-feed
 
+# Include logs-www directory in the build
+include:
+  - logs-www
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
