Clean up blog: fix broken links, remove duplicates, update redirects
- Fix profile picture path in about.markdown
- Fix custom.css include path
- Comment out missing PDF link in ai-control post
- Remove duplicate _posts/images directory
- Remove duplicate PDF from _posts
- Remove unused IG images directory
- Remove redundant to_locally_run_the_blog.txt
- Replace HTML meta refresh with Jekyll redirects
- Update _config.yml with proper URL and redirect plugin

--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ github_username:  gboxo
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-redirect-from
 
 # Include logs-www directory in the build
 include:
