--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ minimal_mistakes_skin: default # "air", "aqua", "contrast", "dark", "dirt", "neo
 # Author / Sidebar
 author:
   name: "Gerard Boxó"
-  avatar: "/assets/images/profile_picture.jpg"
+  avatar: "/assets/images/pfp.png"
   bio: "MSc graduate in Bioinformatics. Exploring Mechanistic Interpretability."
   location: "Barcelona"
   links:
