change blog name

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 # Site Settings
-title: M.I
-email: gerard.boxo@estudiantat.upc.edu
+title: Gerard Boxó
 description: >-
   This blog is dedicated to discussing Mechanistic Interpretability
 baseurl: "" # the subpath of your site, e.g. /blog
